--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNBSU Undergrad Pass</title>
+    <title></title>
 
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -131,13 +131,13 @@
     <div class="content">
         <div class="pass-card">
 
-            <div class="pass-title">UNBSU Undergrad Pass</div>
+            
 
             <div id="date" class="date"></div>
             <div id="clock" class="time"></div>
 
-            <div class="transit-name">Fredericton Transit</div>
-            <div class="route">10N Carlisle</div>
+            <div class="transit-name">Codiac Transit</div>
+            <div class="route">51N</div>
 
             <!-- ✅ Buildings + Bus From Folder -->
             <div class="bus-scene">
@@ -147,7 +147,7 @@
 
             <button class="expire-btn">Expire</button>
             <div class="expire-text">This pass expires after 14 minutes</div>
-            <div class="user-id">User ID 1111578593</div>
+            <div class="user-id">User ID 111157853</div>
 
         </div>
     </div>
