--- a/index.html
+++ b/index.html
@@ -76,21 +76,23 @@
         }
 
         .buildings {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            z-index: 1;
-        }
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+    z-index: 1;   /* ✅ Background */
+}
 
-        .bus {
-            position: absolute;
-            bottom: 5px;
-            width: 240px;
-            z-index: 2;
-            animation: busMove 3s linear infinite;
-        }
+.bus {
+    position: absolute;
+    bottom: 5px;
+    width: 240px;
+    z-index: 5;   /* ✅ Bring bus in front */
+    animation: busMove 3s linear infinite;
+}
+
 
         @keyframes busMove {
             0% { left: -300px; }
